# django-sslcommerz

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI-CD-DOCUMENTATION.md  DOCUMENTATION-CICD.md  DOCUMENTATION.md  LICENSE  MANIFEST.in  PRODUCTION-READINESS-CHECKLIST.md  README.md  WORKFLOW-FIXES-SUMMARY.md  example_settings.py  example_urls.py  examples.py  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: ci-cd.yml  code-quality.yml  dependency-management.yml  docs-deploy.yml  release.yml
docs/: Makefile  api_reference.md  conf.py  configuration.md  contributing.md  deployment.md  django_settings.py  examples.md  index.md  installation.md  quickstart.md  requirements.txt
docs/_static/: custom.css  logo.png.txt
scripts/: build-and-deploy-docs.sh  build-docs.sh  deploy.sh  setup-dev.sh  test.sh  validate-workflows.sh  version.sh
sslcommerz/: __init__.py  admin.py  apps.py  client.py  config.py  drf.py  exceptions.py  handlers.py  models.py  signals.py  urls.py  utils.py  views.py
sslcommerz/management/commands/: test_sslcommerz.py
